--- a/assetss/css/style.css
+++ b/assetss/css/style.css
@@ -22,3 +22,45 @@ body {
   list-style: none;
   padding: 24px;
 }
+
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 16px;
+
+}
+
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+.hero {
+  background: center/cover url(/assetss/images/hero_pc.jpg);
+  padding: 280px 0;
+  color: #fff;
+  margin-bottom: 24px;
+}
+.hero__message {
+  font-size: 40px;
+  font-weight: bold;
+  line-height: 1.8;
+  margin-bottom: 32px;
+}
+
+.button {
+  font-size: 16px;
+  padding: 0 48px;
+  line-height: 56px;
+  border-radius: 30px;
+  border: 2px solid #fff;
+  background: none;
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+}
+
+.button--black {
+  border-color: #000;
+  color: #000;
+}
