skillセクション追加

--- a/assetss/css/style.css
+++ b/assetss/css/style.css
@@ -141,6 +141,10 @@ img {
   padding: 80px 0;
 }
 
+.section:nth-child(odd) {
+  background: #fff;
+}
+
 .heading {
   margin-bottom: 64px;
   text-align: center;
@@ -201,3 +205,40 @@ img {
 .profile__text {
   line-height: 1.8;
 }
+
+.grid {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.card {
+  border-radius: 12px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, .12);
+  overflow: hidden;
+}
+
+.skill {
+  text-align: center;
+  color: #fff;
+  background: linear-gradient(to top right, #000, #2d033a);
+  padding: 24px;
+  height: 100%;
+}
+.skill__icon {
+  margin-bottom: 32px;
+}
+.skill__icon img {
+  height: 80px;
+}
+.skill__title {
+  font-weight: normal;
+  line-height: 1;
+  margin-bottom: 16px;
+}
+.skill__description {
+  font-size: 13px;
+  color: rgba(255, 255, 255, .6);
+  line-height: 1.8;
+}
+
