--- a/assetss/css/style.css
+++ b/assetss/css/style.css
@@ -56,6 +56,13 @@ img {
   color: #000;
 }
 
+
+.button--sm {
+  font-size: 14px;
+  line-height: 46px;
+  border-radius: 25px;
+}
+
 .header{
   padding: 0 16px;
   display: flex; /* 子要素を横並びにします */
@@ -207,6 +214,15 @@ img {
   display: flex;
   max-width: 640px;
   margin: 0 auto;
+  margin-bottom: 24px;
+}
+
+.twitter {
+  text-align: center;
+  max-width: 640px;
+  margin: 0 auto;
+  max-height: 1000px;
+  overflow: scroll;
 }
 
 @media screen and (max-width: 640px) {
@@ -333,4 +349,52 @@ iframe {
   iframe {
     height: 160px;
   }
+}
+
+
+.contact {
+  max-width: 560px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 160px 1fr;
+  gap: 16px;
+}
+@media screen and (max-width: 640px) {
+  .contact {
+    grid-template-columns: 1fr;
+  }
+}
+.contact__label {
+  text-align: right;
+  padding-top: 10px;
+}
+@media screen and (max-width: 640px) {
+  .contact__label {
+    text-align: left;
+    padding-top: 0;
+  }
+}
+.contact__footer {
+  grid-column: 2/3;
+  margin-top: 16px;
+}
+@media screen and (max-width: 640px) {
+  .contact__footer {
+    grid-column: 1/2;
+  }
+}
+
+.input {
+  font-size: 16px;
+  border: 1px solid rgba(0, 0, 0, .12);
+  border-radius: 3px;
+  padding: 8px;
+}
+.input--textarea {
+  height: 160px;
+}
+
+.required {
+  color: #de3f3f;
+  margin-left: 3px;
 }
