--- a/assetss/css/style.css
+++ b/assetss/css/style.css
@@ -218,6 +218,18 @@ img {
   margin-bottom: 24px;
 }
 
+.profile__text {
+  line-height: 1.8;
+  margin-bottom: 16px;
+}
+
+/* 追加 */
+.sns-icon {
+  padding: 8px;
+  font-size: 24px;
+  display: inline-block;
+}
+
 .twitter {
   text-align: center;
   max-width: 640px;
