--- a/assetss/css/style.css
+++ b/assetss/css/style.css
@@ -286,6 +286,7 @@ img {
   display: grid;
   gap: 24px;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .card {
@@ -323,6 +324,7 @@ img {
 @media screen and (max-width: 640px) {
   .grid {
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 1fr);
   }
 }
 
@@ -331,6 +333,7 @@ img {
   background: #fff;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
 }
 @media screen and (max-width: 640px) {
   .movie {
@@ -370,16 +373,19 @@ iframe {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 160px 1fr;
+  grid-template-rows: repeat(4, auto);
   gap: 16px;
 }
 @media screen and (max-width: 640px) {
   .contact {
     grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, auto);
   }
 }
 .contact__label {
   text-align: right;
   padding-top: 10px;
+  display: block;
 }
 @media screen and (max-width: 640px) {
   .contact__label {
